--- a/PuzzleGame/Classes/Player/PlayerConfig.plist
+++ b/PuzzleGame/Classes/Player/PlayerConfig.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>ImagePreSize</key>
-	<string>{128,140}</string>
+	<string>{128,128}</string>
 	<key>PlayerFileName</key>
-	<string>Player.png</string>
+	<string>player.png</string>
 	<key>PlayerPosition</key>
 	<string>{150,100}</string>
 	<key>PlayerTag</key>
